# tenens-health

./: .gitignore  .vercelignore  README.html  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh  vercel.json
audit/: decisions.md  verification-log.md
docs/: plan.md
src/coverage_gap/: __init__.py  aggregates.py  cli.py  config.py  geo.py  scoring.py  taxonomy.py  taxonomy.yaml  verification.py
src/coverage_gap/ingest/: cah_pos.py  counties.py  hrsa_hpsa.py  nppes.py  zip_centroids.py
src/coverage_gap/render/: build.py
src/coverage_gap/render/static/: map.js  style.css
src/coverage_gap/render/templates/: about.html  base.html  cah_detail.html  how.html  index.html  methodology.html
tests/: test_aggregates.py  test_cli.py  test_geo.py  test_ingest_cah_pos.py  test_ingest_counties.py  test_ingest_hrsa_hpsa.py  test_ingest_nppes.py  test_ingest_zip_centroids.py  test_render_build.py  test_scoring.py  test_taxonomy.py  test_verification.py
